spacing fix frontpage

--- a/src/templates/indexPage/indexPage.module.scss
+++ b/src/templates/indexPage/indexPage.module.scss
@@ -223,9 +223,10 @@
     display: grid;
     grid-template-columns: $gridColumnTemplate;
     grid-template-rows:
-      220px max-content max-content max-content
-      120px;
+      max-content max-content max-content max-content
+      max-content;
     grid-column-gap: $gridColumnGap;
+    padding-top: 152px;
 
     h1 {
       grid-column: 2 / span 3;
@@ -267,10 +268,11 @@
     display: grid;
     grid-template-columns: $gridColumnTemplate;
     grid-template-rows:
-      220px max-content max-content max-content
-      120px;
+      max-content max-content max-content max-content
+      max-content;
     grid-column-gap: $gridColumnGap;
     background-color: $antiFlashWhite;
+    padding-top: 152px;
 
     h1 {
       grid-column: 7 / span 3;
@@ -370,7 +372,6 @@
       h1 {
         grid-column: 3 / span 5;
         grid-row: 1;
-        margin-top: 100px;
       }
 
       h1 + p {
@@ -419,6 +420,11 @@
         align-items: center;
         padding-bottom: 120px;
       }
+    }
+
+    .irModules,
+    .arena {
+      padding-top: 76px;
     }
   }
 }
